samples/_failures_safe/1761203303_ce9fcd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cc86213.c: In function ‘print_distances’:
./samples/SAFE/__tmp_8cc86213.c:165:9: error: expected declaration or statement at end of input
  165 |         }
      |         ^
./samples/SAFE/__tmp_8cc86213.c:165:9: error: expected declaration or statement at end of input
